[package]
name = "iso4217"
version = "0.1.0"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "Deserializes the ISO 4217 currency code XML list into Rust types."
repository = "https://github.com/LiosK/iso4217-rs"
publish = false

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
ureq = "2.10"
